--- a/edu/src/main/webapp/comment/comment.html
+++ b/edu/src/main/webapp/comment/comment.html
@@ -2,111 +2,129 @@
 <html>
 
 <head>
-	<meta charset="UTF-8">
-	<title>comment/comment.html</title>
-	<style>
-		#commentList>div {
-			border: 1px dotted grey;
-		}
+<meta charset="UTF-8">
+<title>comment/comment.html</title>
+<style>
+#commentList>div {
+	border: 1px dotted grey;
+}
 
-		#commentList>div>strong,
-		#commentList>div>input {
-			margin: 3px;
-		}
-	</style>
-	<script>
-		document.addEventListener('DOMContentLoaded', function () {
-			loadCommentList();
+#commentList>div>strong, #commentList>div>input {
+	margin: 3px;
+}
+</style>
+<script>
+	document.addEventListener('DOMContentLoaded', function() {
+		loadCommentList();
+	});
+	// 목록조회 화면출력 (조회할때 주로 get방식)
+	function loadCommentList() {
+		var xhtp = new XMLHttpRequest();
+		// /edu/comment/comment.html
+		// localhost/edu/commentServ.do?cmd=selectAll
+		xhtp.open('get', '../commentServ.do?cmd=selectAll'); //get방식요청의 파라미터값: ~do?파라미터값=~
+		xhtp.send(); //요청정보 실행
+		xhtp.onload = loadCommentResult;
+	}
+
+	// 목록조회 콜백
+	function loadCommentResult(e) {
+		// xhtp.responseText
+		console.log(e.currentTarget.responseText);
+		var result = JSON.parse(e.currentTarget.responseText); // json타입 -> obj타입
+		var commentList = document.getElementById('commentList');
+
+		result.forEach(function(item) {
+			var commentDiv = makeCommentView(item);
+			commentList.appendChild(commentDiv);
 		});
-		// 목록조회 화면출력 (조회할때 주로 get방식)
-		function loadCommentList() {
-			var xhtp = new XMLHttpRequest();
-			// /edu/comment/comment.html
-			// localhost/edu/commentServ.do?cmd=selectAll
-			xhtp.open('get', '../commentServ.do?cmd=selectAll'); //get방식요청의 파라미터값: ~do?파라미터값=~
-			xhtp.send(); //요청정보 실행
-			xhtp.onload = loadCommentResult;
+	}
+
+	// 한건 생성							// 데이터 한건
+	function makeCommentView(comment) { // {id:?, name:?, content:?}
+		var div = document.createElement('div');
+		div.setAttribute('cid', comment.id);
+		div.setAttribute('cname', comment.name);
+		div.setAttribute('ctent', comment.content);
+		div.setAttribute('id', comment.id);
+
+		//방법1.태그 그려주기
+		//var strong = document.createElement('strong');
+		//var name = document.createTextNode(comment.name);
+		//var text = document.createTextNode(comment.content);
+		//var input = document.createElement('input');
+		//input.setAttribute('type', 'button');
+		//input.setAttribute('value', '수정');
+		//input.onclick = viewUpdateForm;
+
+		//strong.appendChild(name);
+		//div.append(strong, text, input);
+
+		//방법2. 태그 그려주기
+		var str = '<strong>' + comment.name + '</strong>' + comment.content
+				+ '<input type="button" value="수정" onclick="viewUpdateForm('
+				+ comment.id + ')">'
+		div.innerHTML = str;
+
+		return div;
+	}
+
+	function viewUpdateForm(id) {
+		var commentDiv = document.getElementById(id);
+		var updateFormDiv = document.getElementById('commentUpdate');
+		updateFormDiv.style.display = 'block';
+		
+		document.updateForm.id.value = commentDiv.getAttribute('cid');
+		document.updateForm.name.value = commentDiv.getAttribute('cname');
+		document.updateForm.content.value = commentDiv.getAttribute('ctent');
+		
+		//comment 위에 넣고, 등록창은 숨기겠다
+		commentDiv.after(updateFormDiv);
+		document.getElementById('commentAdd').style.display = 'none';
+		
+	}
+
+	// 글 등록
+	function addComment() {
+		console.log(document.forms[0])
+		console.log(document.forms[0].elements[0].value)
+		console.log(document.forms[0].elements[1].value)
+		console.log(document.addForm.name.value)
+		var name = document.addForm.name.value;
+		var content = document.addForm.content.value;
+
+		// 사용자가 값을 입력했는지 안했는지 체크, 입력안할경우 -> 입력창 알림
+		// 결과값을 활용해서 화면에 추가
+		if (name == '' || content == '') {
+			window.alert('필수값을 입력하세요');
+			return;
 		}
 
-		// 목록조회 콜백
-		function loadCommentResult(e) {
-			// xhtp.responseText
-			console.log(e.currentTarget.responseText);
-			var result = JSON.parse(e.currentTarget.responseText); // json타입 -> obj타입
-			var commentList = document.getElementById('commentList');
-
-			result.forEach(function (item) {
-				var commentDiv = makeCommentView(item);
-				commentList.appendChild(commentDiv);
-			});
-		}
-
-		// 한건 생성							// 데이터 한건
-		function makeCommentView(comment) { // {id:?, name:?, content:?}
-			var div = document.createElement('div');
-
-			//태그 그려주기
-			//방법1. var str = '<strong>'+ comment.name + '</strong>' + comment.content + '<input type="button" value="수정" onclick="viewUpdateForm()">'
-			//방법1. div.innerHTML = str;
-
-			//방법2.
-			var strong = document.createElement('strong');
-			var name = document.createTextNode(comment.name);
-			var text = document.createTextNode(comment.content);
-			var input = document.createElement('input');
-			input.setAttribute('type', 'button');
-			input.setAttribute('value', '수정');
-			input.onclick = viewUpdateForm;
-
-			strong.appendChild(name);
-			div.append(strong, text, input);
-
-			return div;
-		}
-
-		function viewUpdateForm() {}
-
-		// 글 등록
-		function addComment() {
-			console.log(document.forms[0])
-			console.log(document.forms[0].elements[0].value)
-			console.log(document.forms[0].elements[1].value)
-			console.log(document.addForm.name.value)
-			var name = document.addForm.name.value;
-			var content = document.addForm.content.value;
-
-			// 사용자가 값을 입력했는지 안했는지 체크, 입력안할경우 -> 입력창 알림
-			// 결과값을 활용해서 화면에 추가
-			if (name == '' || content == '') {
-				window.alert('필수값을 입력하세요');
-				return;
-			}
-
-			// 등록Ajax 호출 -> 정상적으로 등록이 된다면 실행
-			var xhtp = new XMLHttpRequest();
-			xhtp.open('post', '../commentServ.do');
-			xhtp.setRequestHeader("Content-type",
+		// 등록Ajax 호출 -> 정상적으로 등록이 된다면 실행
+		var xhtp = new XMLHttpRequest();
+		xhtp.open('post', '../commentServ.do');
+		xhtp.setRequestHeader("Content-type",
 				"application/x-www-form-urlencoded"); //포스트와 딜리트방식은 꼭 헤더값 필요. 파라미터 인식을위해
-			xhtp.send(`cmd=insert&name=${name}&content=${content}`);
-			xhtp.onload = addResult;
+		xhtp.send(`cmd=insert&name=${name}&content=${content}`);
+		xhtp.onload = addResult;
 
-			// 등록 콜백함수
-			function addResult(e) {
-				console.log(xhtp.responseText);
-				var result = JSON.parse(xhtp.responseText);
-				if (result.retCode == 'Success') {
-					var commentDiv = makeCommentView(result.retVal); // {id:?, name:?, content:?}
-					document.getElementById('commentList').append(commentDiv)
-				} else {
-					window.alert(result.retVal);
-				}
-
-				// 입력화면 초기화
-				document.addForm.name.value = "";
-				document.addForm.content.value = "";
+		// 등록 콜백함수
+		function addResult(e) {
+			console.log(xhtp.responseText);
+			var result = JSON.parse(xhtp.responseText);
+			if (result.retCode == 'Success') {
+				var commentDiv = makeCommentView(result.retVal); // {id:?, name:?, content:?}
+				document.getElementById('commentList').append(commentDiv)
+			} else {
+				window.alert(result.retVal);
 			}
+
+			// 입력화면 초기화
+			document.addForm.name.value = "";
+			document.addForm.content.value = "";
 		}
-	</script>
+	}
+</script>
 </head>
 
 <body>
@@ -121,10 +139,13 @@
 	</div>
 	<!-- 댓글수정 -->
 	<div id="commentUpdate" style="display: none;">
-		<input type="hidden" name="id"> 이름: <input type="text" name="name" size="10"><br> 내용:
+	 <form action="" method="get" name="updateForm">
+		<input type="hidden" name="id"> 이름: <input type="text"
+			name="name" size="10"><br> 내용:
 		<textarea name="content" cols="20" rows="2"></textarea>
 		<br> <input type="button" value="변경" onclick="updateComment()">
 		<input type="button" value="취소" onclick="cancelUpdate()">
+		</form>
 	</div>
 </body>
 
